--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -10,5 +10,6 @@
 
 @import './layout/header.scss';
 @import './layout/body.scss';
+@import './layout/header-lib.scss';
 @import './layout/body-lib.scss';
 @import './layout/footer.scss';
