--- a/src/partials/moviesGallery.html
+++ b/src/partials/moviesGallery.html
@@ -1,5 +1,5 @@
-<form class="form" action="submit">
+<!-- <form class="form" action="submit">
     <input type="text" name="searchQuery" autocomplete="off" placeholder="write movie"></input>
     <button type="submit">search</button>
 </form>
-<div class="gallery"></div>
+<ul class="gallery"></ul> -->
