--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,6 @@
 <div class="footer">
     <p>© 2022 | All Rights Reserved | Developed with
         <img src="./images/favorite.svg" alt="Love heart" class="footer-icon">
-        <a href="./partials/modal-our-team.html">by GoIT Students</a>
+        <a href="./partials/modal-our-team.html" id="modalTeam">by GoIT Students</a>
     </p>
 </div>
