--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -17,12 +17,14 @@
             </ul>
         </nav>
         <div class="navigation__container container">
-            <input type="text" name="navigation__input" class="navigation__input" placeholder="Movie search" />
-            <button class="navigation__button" type="submit">
-                <svg class="input__icon" width="12" height="12">
-                    <use href="./images/symbol-defs.svg#icon-search"></use>
-                </svg>
-            </button>
+            <form class="navigation__form">
+                <input type="text" name="navigation__input" class="navigation__input" placeholder="Movie search" />
+                <button class="navigation__button" type="submit">
+                    <svg class="input__icon" width="12" height="12">
+                        <use href="./images/symbol-defs.svg#icon-search"></use>
+                    </svg>
+                </button>
+            </form>
         </div>
     </div>
 </header>
