--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -2,7 +2,7 @@
     <div class="backdrop js-backdrop">
       <div class="modal">
         <button type="button" class="modal-close">
-          <svg width="26px" height="26px">
+          <svg class="modal-close__icon" width="26px" height="26px">
             <use href="./images/modal-close.svg#icon-close"></use>
           </svg>
         </button>
@@ -27,7 +27,7 @@
               <th>Western</th>
             </tr>
           </table>
-          <h2 class="title-about">About</h2>
+          <h2 class="title-about">ABOUT</h2>
           <p class="about-text">
             Four of the West’s most infamous outlaws assemble to steal a huge
             stash of gold from the most corrupt settlement of the gold rush
