--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -2,6 +2,8 @@
 @import './utils/reset';
 @import './utils/hidden';
 
+@import './components/loader';
+@import './components/preloader';
 @import './components/container';
 @import './components/section';
 @import './components/modal';
