--- a/src/sass/test.scss
+++ b/src/sass/test.scss
@@ -1,13 +1,21 @@
-.film_list{
-    display: grid;
-        grid-template-columns: repeat(4, 1fr);
-        grid-gap: 10px;
-        grid-auto-rows: minmax(100px, auto);
+.gallery{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    
+    // display: grid;
+    //     grid-template-columns: repeat(4, 1fr);
+    //     grid-gap: 10px;
+    //     grid-auto-rows: minmax(100px, auto);
+}
+.link-card{
+margin: 10px;
 }
 .photo-card{
     width: 420px;
     height: 280px;
-    margin: 10px;
+    
     border: 1px royalblue solid;
     border-radius: 5px;
 }
