--- a/src/partials/body.html
+++ b/src/partials/body.html
@@ -1,2 +1,6 @@
-<ul class="gallery"></ul>
-<div id="scroll-check" class="scroll-check"></div>
+<section class="container container--padding">
+    <ul class="gallery list">
+        <!-- cards of movies -->
+    </ul>
+    <div id="scroll-check" class="scroll-check"></div>
+</section>
