--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -9,6 +9,7 @@
 @import './components/modal';
 @import './components/modal-our-team';
 @import './components/button';
+@import './components/card';
 
 @import './layout/header.scss';
 @import './layout/body.scss';
