--- a/src/sass/layout/header.scss
+++ b/src/sass/layout/header.scss
@@ -8,6 +8,7 @@
     min-height: 230px;
     padding-top: 40px;
     
+    margin: 0 auto;
 
     @media (min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
