add color text of input

--- a/src/sass/layout/header.scss
+++ b/src/sass/layout/header.scss
@@ -144,6 +144,7 @@
     cursor: pointer;
     width: 280px;
     align-items: center;
+    color: #FFFFFF;
 
     @media screen and (min-width: 768px) {
         width: 336px;
