--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -16,7 +16,7 @@
                 </li>
             </ul>
         </nav>
-        <div class="navigation__container">
+        <div class="navigation__container container">
             <form class="navigation__form">
                 <input type="text" name="navigation__input" class="navigation__input" placeholder="Movie search" />
                 <button class="navigation__button" type="submit">
@@ -25,9 +25,6 @@
                     </svg>
                 </button>
             </form>
-            <span class="navigation__notificate visually-hidden">
-                Search result not successful. Enter the correct movie name and
-            </span>
         </div>
     </div>
 </header>
