--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -1,4 +1,3 @@
-
 .backdrop {
     position: fixed;
     top: 0;
@@ -25,7 +24,6 @@
 
     padding: 42px 20px 46px 20px;
     max-width: 280px;
-    max-height: 940px;
 
     background-color: #ffffff;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -59,7 +57,7 @@
     pointer-events: initial;
 }
 
-.card-container {
+.container-modal {
     display: grid;
 }
 
@@ -70,7 +68,7 @@
     margin-bottom: 20px;
 }
 
-.img-card {
+.img-modal {
     margin-bottom: 20px;
 }
 
@@ -79,18 +77,22 @@
     font-size: 13px;
     margin-bottom: 20px;
     text-align: left;
-    line-height: 1.3;
+    line-height: 1.5;
     font-weight: 500;
 }
 
-.title-about {
+.table__text {
+    color: #8C8C8C;
+}
+
+.title-about__modal {
     letter-spacing: 0.01em;
     margin-bottom: 8px;
     font-size: 13px;
     line-height: 1.3;
 }
 
-.about-text {
+.about-text__modal {
     margin-bottom: 20px;
     font-size: 12px;
     line-height: 1.7;
@@ -98,16 +100,13 @@
     overflow: auto;
 }
 
-.text-table {
-    color: #8C8C8C;
-}
 
-.buttons-container {
+.buttons-modal {
     display: flex;
     justify-content: space-around;
 }
 
-.button-watched_modal {
+.button-watched__modal {
     display: inline-flex;
     align-items: center;
     justify-content: center;
@@ -121,7 +120,7 @@
     line-height: 1.3;
 }
 
-.button-queue_modal {
+.button-queue__modal {
     display: inline-flex;
     align-items: center;
     justify-content: center;
