--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -24,8 +24,8 @@
     transition: transform 200ms ease-in-out;
 
     padding: 42px 20px 46px 20px;
-    max-width: 280px;
-    max-height: 940px;
+    max-width: 580px;
+    max-height: 740px;
 
     background-color: #ffffff;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -72,6 +72,7 @@
 
 .img-card {
     margin-bottom: 20px;
+    height: 240px;
 }
 
 .table {
