--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -25,6 +25,9 @@
                     </svg>
                 </button>
             </form>
+            <span class="navigation__notificate visually-hidden">
+                Search result not successful. Enter the correct movie name and
+            </span>
         </div>
     </div>
 </header>
