--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -1,3 +1,54 @@
 .card{
     cursor: pointer;
 }
+.card__item{
+    margin-bottom: 20px;
+
+}
+.card__img{
+    margin-bottom: 12px;
+    border-radius: 5px;
+}
+.card__inform{
+    display: flex;
+}
+.card__title
+{
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 16px;
+    text-transform: uppercase;
+    color: #000000;
+
+    @media screen and (min-width: 1200px){
+        font-size: 20px;
+        line-height: 24px;
+    }
+}
+
+.card__genres,.card__date{
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 16px;
+
+        @media screen and (min-width: 1200px) {
+            font-size: 20px;
+            line-height: 24px;
+        }
+    
+        color: #FF6B08;
+}
+.card__date{
+    margin-left: 2px;
+}
+.card__vote{
+    padding: 3px 12px;
+    margin-left: 8px;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 14px;
+    background: #FF6B01;
+    border-radius: 5px;
+
+    color:#fff;
+}
