--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -25,7 +25,7 @@
                     </svg>
                 </button>
             </form>
-            <span class="navigation__notificate visually-hidden">
+            <span class="navigation__notificate navigation__notificate-hidden">
                 Search result not successful. Enter the correct movie name and
             </span>
         </div>
