--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -1,32 +1,42 @@
 .backdrop {
     position: fixed;
     top: 0;
-    left: 0;
     z-index: 999;
     background: rgba(0, 0, 0, 0.56);
     width: 100vw;
     height: 100vh;
     opacity: 0;
     visibility: hidden;
-    transition: opacity 200ms ease-in-out, visibility 200ms ease-in-out;
+    transition: opacity 300ms ease-in-out, visibility 300ms ease-in-out;
 }
 
 .backdrop.show-modal .modal {
-    transform: scale(1);
+    transform: translate(-50%, -50%) scale(1);
 }
 
 .modal {
     position: absolute;
-    top: 2%;
-    left: 43%;
-    transform: scale(1.1);
-    transition: transform 200ms ease-in-out;
-
+    top: 50%;
+    left: 50%;
     padding: 42px 20px 46px 20px;
+    width: calc(100% - 30px);
     max-width: 280px;
 
     background-color: #ffffff;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+    transform: translate(-50%, -50%) scale(1.1);
+    transition: transform 300ms ease-in-out;
+
+    @media screen and (min-width: 768px) {
+        max-width: 704px;
+        padding: 40px 72px 40px 36px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        max-width: 806px;
+        padding: 40px 12px 40px 12px;
+    }
 }
 
 .modal-close {
@@ -48,7 +58,7 @@
     &:hover .modal-close__icon,
     &:focus .modal-close__icon {
         fill: currentColor;
-    } 
+    }
 }
 
 .show-modal {
@@ -57,8 +67,10 @@
     pointer-events: initial;
 }
 
-.container-modal {
-    display: grid;
+.modal__content {
+    @media screen and (min-width: 768px) {
+        display: flex;
+    }
 }
 
 .title-modal {
@@ -66,24 +78,50 @@
     font-size: 20px;
     line-height: 1.15;
     margin-bottom: 20px;
+
+    @media screen and (min-width: 1200px) {
+        font-size: 30px;
+        line-height: 1.17;
+    }
 }
 
 .img-modal {
+    border-radius: 5px;
     margin-bottom: 20px;
-    height: 240px;
+
+    @media screen and (min-width: 768px) {
+        max-width: 264px;
+        max-height: 374px;
+        margin: 0 68px 0 0;
+    }
+
+    @media screen and (min-width: 1200px) {
+        max-width: 375px;
+        max-height: 478px;
+        margin: 0 16px 0 0;
+    }
 }
 
 .table {
     letter-spacing: 0.01em;
-    font-size: 13px;
+    font-size: 12px;
     margin-bottom: 20px;
     text-align: left;
     line-height: 1.5;
     font-weight: 500;
 }
 
+.table-separator:not(:last-child) {
+    margin-bottom: 8px;
+}
+
 .table__text {
     color: #8C8C8C;
+
+    @media screen and (min-width: 768px) {
+        display: flex;
+        margin-right: 41px;
+    }
 }
 
 .title-about__modal {
@@ -105,12 +143,17 @@
 .buttons-modal {
     display: flex;
     justify-content: space-around;
+
+    @media screen and (min-width: 768px) {
+        justify-content: flex-end;
+    }
 }
 
 .button-watched__modal {
     display: inline-flex;
     align-items: center;
     justify-content: center;
+    color: #ffffff;
     background: #FF6B01;
     border: none;
     min-width: 110px;
@@ -119,6 +162,14 @@
     font-weight: 500;
     font-size: 12px;
     line-height: 1.3;
+
+    @media screen and (min-width: 768px) {
+        min-width: 125px;
+    }
+
+    @media screen and (min-width: 768px) {
+        min-width: 136px;
+    }
 }
 
 .button-queue__modal {
@@ -133,6 +184,15 @@
     font-weight: 500;
     font-size: 12px;
     line-height: 1.3;
+
+    @media screen and (min-width: 768px) {
+        margin-left: 15px;
+        min-width: 125px;
+    }
+
+    @media screen and (min-width: 768px) {
+        min-width: 136px;
+    }
 }
 
 .vote-average {
@@ -141,6 +201,7 @@
     height: 16px;
     align-items: center;
     justify-content: center;
+    color: #ffffff;
     background: #FF6B01;
     border-radius: 5px;
 }
