--- a/src/partials/body-lib.html
+++ b/src/partials/body-lib.html
@@ -1,5 +1,5 @@
 <section class="container container--padding">
-    <ul class="gallery-lib list">
+    <ul class="gallery list">
     <!-- Карточки фильмов -->
     </ul>
 </section>
