--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,6 @@
 <div class="footer">
     <p>© 2022 | All Rights Reserved | Developed with
         <img src="./images/favorite.svg" alt="Love heart" class="footer-icon">
-        <a href="" id="modalTeam" data-modal-open>by GoIT Students</a>
+        <a href="" id="modalTeam">by GoIT Students</a>
     </p>
 </div>
