--- a/src/partials/modal-our-team.html
+++ b/src/partials/modal-our-team.html
@@ -1,5 +1,5 @@
-<div class="backdrop-modal is-hidden-modal" data-modal>
-  <button type="button" class="modal-btn" data-modal-close>
+<div class="backdrop-modal is-hidden-modal">
+  <button type="button" class="modal-btn">
     <svg class="modal__icon" width="32" height="32">
       <use href="./images/symbol-defs.svg#icon-close-black"></use>
     </svg>
