--- a/src/sass/components/_modal-our-team.scss
+++ b/src/sass/components/_modal-our-team.scss
@@ -21,7 +21,7 @@
     margin: auto auto;
     width: 810px;
     height: 560px;
-    background-image: linear-gradient(#2E9AFF 25% 30%, #FFD829 75%);
+    background-image: linear-gradient(45deg, rgba(128, 128, 128) 45% 30%, orange);
     justify-content: center;
     padding: 50px;
     border-radius: 20%;
