--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -25,9 +25,10 @@
                     </svg>
                 </button>
             </form>
-            <span class="navigation__notificate navigation__notificate-hidden">
+            <span class=" navigation__notificate navigation__notificate-hidden">
                 Search result not successful. Enter the correct movie name and
             </span>
         </div>
     </div>
 </header>
+<!-- navigation__notificate-hidden navigation__notificate -->
