--- a/src/sass/layout/header.scss
+++ b/src/sass/layout/header.scss
@@ -173,8 +173,36 @@
     fill: currentColor;
 
 }
+@keyframes myAnim {
+    0% {
+        animation-timing-function: ease-out;
+        transform: scale(1);
+        transform-origin: center center;
+    }
+
+    10% {
+        animation-timing-function: ease-in;
+        transform: scale(0.91);
+    }
+
+    17% {
+        animation-timing-function: ease-out;
+        transform: scale(0.98);
+    }
+
+    33% {
+        animation-timing-function: ease-in;
+        transform: scale(0.87);
+    }
+
+    45% {
+        animation-timing-function: ease-out;
+        transform: scale(1);
+    }
+}
 
 .navigation__notificate {
+    animation: myAnim 2s linear 1s infinite normal none;
     color: #FF001B;
     font-weight: 400;
     font-size: 14px;
@@ -186,16 +214,14 @@
         max-width: 280px;
     }
 }
-// @keyframes changeOpacity {
-//     0%{opacity: 0;}
-//     50%{opacity: 0.5;}
-//     100%{opacity: 1;}
-// }
+
+
 .navigation__notificate-hidden{
     opacity: 0;
     // animation-name: changeOpacity;
     // animation-duration: 2000ms;
 }
+
 .navigation__form {
     margin-bottom: 16px;
 
