--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -19,3 +19,16 @@ body {
     color: var(--main-text-color);
     background-color: var(--main-bg-color);
 }
+
+body::-webkit-scrollbar {
+    width: 21px;
+}
+
+body::-webkit-scrollbar-track {
+    background-color: #564D4D;
+}
+
+body::-webkit-scrollbar-thumb {
+    background: linear-gradient(to top, #302D2D, #FF001B);
+    border-radius: 5px;
+}
