Second version, correct js code, changed color, add animation

--- a/src/partials/modal-our-team.html
+++ b/src/partials/modal-our-team.html
@@ -4,7 +4,7 @@
       <use href="./images/symbol-defs.svg#icon-close-black"></use>
     </svg>
   </button>
-  <div class="modal-team">
+  <div class="modal-team bottom-container">
     <h2 class="modal-team-title">Our team</h2>
     <ul class="modal-team-list list">
       <li class="modal-team-item">
@@ -33,4 +33,5 @@
       </li>
     </ul>
   </div>
+  
 </div>
