watched-queue-fixed-bug

--- a/src/partials/body-lib.html
+++ b/src/partials/body-lib.html
@@ -1,5 +1,6 @@
 <section class="container container--padding">
+    <div class="filler-container"></div>
     <ul class="gallery list">
     <!-- Карточки фильмов -->
-    </ul>
+    </ul>    
 </section>
