--- a/src/sass/layout/body-lib.scss
+++ b/src/sass/layout/body-lib.scss
@@ -24,3 +24,9 @@
         grid-template-columns: repeat(3, minmax(347, 1fr));
     }
 }
+
+.fill-text {
+    color: #545454;
+    text-align: center;
+
+}
