--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -153,7 +153,7 @@
 
 .buttons-modal {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 
     @media screen and (min-width: 768px) {
         justify-content: flex-end;
@@ -167,19 +167,23 @@
     color: #ffffff;
     background: #FF6B01;
     border: none;
-    min-width: 120px;
-    min-height: 44px;
+    max-width: 110px;
+    max-height: 44px;
     border-radius: 5px;
     font-weight: 500;
     font-size: 12px;
     line-height: 1.3;
+    padding: 13px;
 
     @media screen and (min-width: 768px) {
-        min-width: 125px;
+        font-size: 12px;
+        padding: 14px 6px;
+        max-width: 125px;
     }
 
-    @media screen and (min-width: 768px) {
-        min-width: 139px;
+    @media screen and (min-width: 1200px) {
+        min-width: 136px;
+        padding: 14px 7px;
     }
 }
 
@@ -189,20 +193,24 @@
     justify-content: center;
     border: 1px solid #000000;
     background: #ffffff;
-    min-width: 110px;
-    min-height: 44px;
+    max-width: 110px;
+    max-height: 44px;
     border-radius: 5px;
     font-weight: 500;
     font-size: 12px;
     line-height: 1.3;
+    padding: 13px;
 
     @media screen and (min-width: 768px) {
         margin-left: 15px;
         min-width: 125px;
+        padding: 14px 7px;
+        font-size: 13px;
     }
 
-    @media screen and (min-width: 768px) {
-        min-width: 136px;
+    @media screen and (min-width: 1200px) {
+       min-width: 136px;
+       padding: 14px 7px;
     }
 }
 
