--- a/src/sass/components/_modal-our-team.scss
+++ b/src/sass/components/_modal-our-team.scss
@@ -1,6 +1,7 @@
 .backdrop-modal {
     position: fixed;
     top: 0px;
+padding-top: 10%;
     width: 100vw;
     height: 100vh;
     background: rgba(0, 0, 0, 0.2);
@@ -21,7 +22,7 @@
     margin: auto auto;
     width: 320px;
     height: 650px;
-    background-image: linear-gradient(45deg, rgba(128, 128, 128) 45% 30%, orange);
+    background-image: linear-gradient(100deg, hsl(7, 83%, 40%),rgb(20, 3, 3));
     justify-content: center;
     padding: 50px;
     border-radius: 20%;
@@ -71,6 +72,7 @@
 }
 
   .modal-btn {
+    margin-top: 10%;
       position: absolute;
       border-radius: 50%;
       border: 1px solid rgba(0, 0, 0, 0.1);
