--- a/src/partials/body-lib.html
+++ b/src/partials/body-lib.html
@@ -1,4 +1,5 @@
 <section class="container container--padding">
+    <div class="filler-container"></div>
     <ul class="gallery list">
     <!-- Карточки фильмов -->
     </ul>
