--- a/src/partials/header-lib.html
+++ b/src/partials/header-lib.html
@@ -15,7 +15,7 @@
             </ul>
         </nav>
         <div class="button-wrap">
-            <button type="button" class="button-watched">Watched</button>
+            <button type="button" class="button-watched button-active">Watched</button>
             <button type="button" class="button-queue">Queue</button>
         </div>
     </div>
