--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -11,6 +11,7 @@
 @import './components/button';
 @import './components/card';
 
+@import './layout/login_user.scss';
 @import './layout/header.scss';
 @import './layout/body.scss';
 @import './layout/header-lib.scss';
