--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,33 +1,71 @@
 <header class="header">
-    <div class="container">
-        <nav class="navigation">
-            <a class="navigation__logo link" href="./index.html">
-                <svg class="navigation__icon" width="24" height="24">
-                    <use href="./images/symbol-defs.svg#icon-film"></use>
-                </svg>
-                <span>Filmoteka</span>
-            </a>
-            <ul class="navigation__list list">
-                <li class="navigation__item">
-                    <a class="navigation__link link current" href="./index.html">HOME</a>
-                </li>
-                <li class="navigation__item">
-                    <a class="navigation__link link" href="./index-lib.html">MY LIBRARY</a>
-                </li>
-            </ul>
-        </nav>
-        <div class="navigation__container container">
-            <form class="navigation__form" id = "myForm">
-                <input type="text" name="navigation__input" class="navigation__input" placeholder="Movie search" />
-                <button class="navigation__button" type="submit">
-                    <svg class="input__icon" width="12" height="12">
-                        <use href="./images/symbol-defs.svg#icon-search"></use>
-                    </svg>
-                </button>
-            </form>
-            <span class="navigation__notificate navigation__notificate-hidden">
-                Search result not successful. Enter the correct movie name and
-            </span>
-        </div>
+  <div class="container">
+    <div class="auth">
+      <div class="auth__button-list">
+        <button class="signup-button-open auth_button">Singup</button>
+        <button class="login-button-open auth_button">Login</button>
+      </div>
+      <div class="visually-hidden signup">
+        <form>
+          <label class="auth__label" for="email">Email:</label>
+          <input class="auth__input" type="email" name="email" />
+          <label class="auth__label" for="password">Pasword:</label>
+          <input class="auth__input" type="password" name="password" />
+          <button class="signup__button auth_button">Singup</button>
+        </form>
+        <button class="signup_google auth_button">Singup with Google</button>
+      </div>
+      <div class="login visually-hidden auth__form">
+        <form>
+          <label class="auth__label" for="email">Email:</label>
+          <input class="auth__input" type="email" name="email" />
+          <label class="auth__label" for="password">Pasword:</label>
+          <input class="auth__input" type="password" name="password" />
+          <button class="auth_button signup__button">login</button>
+        </form>
+        <button class="login_google auth_button">Login with Google</button>
+      </div>
+      <div class="user-info visually-hidden">
+        <img src="./images/user.webp" alt="user" class="user__img" />
+        <span class="user__name">User</span>
+        <button class="logout auth_button">logout</button>
+      </div>
     </div>
+    <nav class="navigation">
+      <a class="navigation__logo link" href="./index.html">
+        <svg class="navigation__icon" width="24" height="24">
+          <use href="./images/symbol-defs.svg#icon-film"></use>
+        </svg>
+        <span>Filmoteka</span>
+      </a>
+      <ul class="navigation__list list">
+        <li class="navigation__item">
+          <a class="navigation__link link current" href="./index.html">HOME</a>
+        </li>
+        <li class="navigation__item">
+          <a class="navigation__link link" href="./index-lib.html"
+            >MY LIBRARY</a
+          >
+        </li>
+      </ul>
+    </nav>
+    <div class="navigation__container container">
+      <form class="navigation__form" id="myForm">
+        <input
+          type="text"
+          name="navigation__input"
+          class="navigation__input"
+          placeholder="Movie search"
+        />
+        <button class="navigation__button" type="submit">
+          <svg class="input__icon" width="12" height="12">
+            <use href="./images/symbol-defs.svg#icon-search"></use>
+          </svg>
+        </button>
+      </form>
+      <span class="navigation__notificate navigation__notificate-hidden">
+        Search result not successful. Enter the correct movie name and
+      </span>
+    </div>
+  </div>
 </header>
