added dark theme, deleted container in nav-header, added a section title

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -16,7 +16,7 @@
                 </li>
             </ul>
         </nav>
-        <div class="navigation__container container">
+        <div class="navigation__container">
             <form class="navigation__form" id = "myForm">
                 <input type="text" name="navigation__input" class="navigation__input" placeholder="Movie search" />
                 <button class="navigation__button" type="submit">
@@ -28,6 +28,12 @@
             <span class=" navigation__notificate navigation__notificate-hidden">
                 Search result not successful. Enter the correct movie name and
             </span>
+        </div>
+        <div class="dark-theme__container">
+            <button id="dark-theme" class="dark-theme">
+                <div class="light visible">Light</div>
+                <div class="dark">Dark</div>
+            </button>
         </div>
     </div>
 </header>
