--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -10,9 +10,11 @@
 @import './components/modal-our-team';
 @import './components/button';
 @import './components/card';
+@import './components/theme';
 
 @import './layout/header.scss';
 @import './layout/body.scss';
 @import './layout/header-lib.scss';
 @import './layout/body-lib.scss';
 @import './layout/footer.scss';
+
