--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -16,7 +16,7 @@
                 </li>
             </ul>
         </nav>
-        <div class="navigation__container container" name="up">
+        <div class="navigation__container container" name="">
             <form class="navigation__form" id = "myForm">
                 <input type="text" name="navigation__input" class="navigation__input" placeholder="Movie search" />
                 <button class="navigation__button" type="submit">
