--- a/src/sass/components/_theme.scss
+++ b/src/sass/components/_theme.scss
@@ -1,3 +1,6 @@
+.main{
+    background-color: #F0F8FF;
+}
 .dark-theme__container {
     display: flex;
     flex-direction: row-reverse;
@@ -67,5 +70,5 @@
 
 .darktheme {
     color: #fff;
-    background-color: rgb(20, 3, 3);
+    background-color: #696969;
 }
