--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -18,9 +18,9 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    padding: 40px 20px 40px 20px;
+    padding: 35px 15px 30px 15px;
     width: calc(100% - 30px);
-    max-width: 280px;
+    max-width: 290px;
 
     background-color: #ffffff;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -61,6 +61,10 @@
     }
 }
 
+.modal-close__icon {
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .show-modal {
     opacity: 1;
     visibility: visible;
@@ -74,10 +78,11 @@
 }
 
 .title-modal {
+    display: block;
     letter-spacing: 0.01em;
     font-size: 19px;
     line-height: 1.15;
-    margin-bottom: 15px;
+    font-weight: 500;
 
     @media screen and (min-width: 1200px) {
         font-size: 30px;
@@ -86,10 +91,12 @@
 }
 
 .img-modal {
+    height: 250px;
     border-radius: 5px;
     margin-bottom: 15px;
 
     @media screen and (min-width: 768px) {
+        height: 100%;
         max-width: 264px;
         max-height: 374px;
         margin: 0 68px 0 0;
@@ -123,13 +130,15 @@
 }
 
 .title-about__modal {
+    display: block;
     letter-spacing: 0.01em;
-    margin-bottom: 8px;
     font-size: 13px;
     line-height: 1.3;
+    font-weight: 500;
 }
 
 .about-text__modal {
+    display: inline-flex;
     margin-bottom: 15px;
     font-size: 12px;
     line-height: 1.7;
@@ -138,6 +147,10 @@
     
     @media screen and (min-width: 768px) {
         max-height: 236px;
+    }
+    
+    @media screen and (min-width: 1200px) {
+        margin-bottom: 0px;
     }
 }
 
@@ -174,6 +187,7 @@
     font-size: 12px;
     line-height: 1.3;
     padding: 13px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     @media screen and (min-width: 768px) {
         font-size: 12px;
@@ -200,6 +214,7 @@
     font-size: 12px;
     line-height: 1.3;
     padding: 13px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     @media screen and (min-width: 768px) {
         margin-left: 15px;
