--- a/src/sass/layout/body-lib.scss
+++ b/src/sass/layout/body-lib.scss
@@ -1,10 +1,10 @@
 .container--padding {
     padding-top: 20px;
-    padding-bottom: 40px;
+    //padding-bottom: 40px;
 
     @media screen and (min-width: 768px) {
         padding-top: 60px;
-        padding-bottom: 60px;
+        //padding-bottom: 60px;
     }
 }
 
@@ -25,12 +25,14 @@
     }
 }
 
-.gallery-lib {
-    min-height: 100vh;
-}
-
 .fill-text {
     color: #545454;
     text-align: center;
 
+}
+
+.img__library {
+    max-width: 300px;
+    max-height: 200px;
+    margin: auto;
 }
