--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -3,6 +3,7 @@
 @import './utils/hidden';
 
 @import './components/spinner';
+@import './components/topbutton';
 @import './components/preloader';
 @import './components/container';
 @import './components/section';
