--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -2,6 +2,7 @@
 @import './utils/reset';
 @import './utils/hidden';
 
+@import './components/topbutton';
 @import './components/spinner';
 @import './components/preloader';
 @import './components/container';
