update-top-button

--- a/src/partials/topButton.html
+++ b/src/partials/topButton.html
@@ -1,4 +1,4 @@
 <div class="scroll__button">
-    <button onclick="topFunction()" id="onTopBtn" class="top_button is-hidden" title="Scroll up">
+    <button id="onTopBtn" class="top_button is-hidden" title="Scroll up">
         <i class="fa-solid fa-circle-arrow-up"></i></button>
 </div>
