add dark theme, section title, deleted container in nav-header

--- a/src/partials/body.html
+++ b/src/partials/body.html
@@ -1,4 +1,5 @@
-<section class="container container--padding">
+<section class="container container--padding main">
+  <h2 class="visually-hidden">Movies</h2>
   <ul class="gallery list">
     <!-- cards of movies -->
   </ul>
