--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -11,6 +11,7 @@
 @import './components/modal-our-team';
 @import './components/button';
 @import './components/card';
+@import './components/theme';
 
 @import './layout/login_user.scss';
 @import './layout/header.scss';
