--- a/src/sass/layout/header-lib.scss
+++ b/src/sass/layout/header-lib.scss
@@ -32,7 +32,7 @@
     }
 
     @media screen and (min-width: 1200px) {
-        max-width: 1200px;
+        max-width: 100%;
         max-height: 216px;
         background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
             url(../images/bg-img-desk.jpg);
