--- a/src/sass/layout/header.scss
+++ b/src/sass/layout/header.scss
@@ -35,7 +35,7 @@
     }
 
     @media screen and (min-width: 1200px) {
-        max-width: 1200px;
+        max-width: 100%;
         background-image:
             url(../images/header-background-desk.jpg);
             opacity: 0.9;
