--- a/src/sass/layout/header-lib.scss
+++ b/src/sass/layout/header-lib.scss
@@ -17,7 +17,7 @@
     }
 
     @media screen and (min-width: 768px) {
-        max-width: 768px;
+        max-width: 100%;
         max-height: 219px;
         padding: 40px 32px 60px 32px;
         background-image: linear-gradient(rgba(0, 0, 0, 0.56), rgba(0, 0, 0, 0.56)),
