--- a/src/sass/components/_container.scss
+++ b/src/sass/components/_container.scss
@@ -9,10 +9,10 @@
 
     @media screen and (min-width: 768px) {
         padding: 0 32px;
-        width: 768px;
+        width: 100%;
     }
 
     @media screen and (min-width: 1200px) {
-        width: 1200px;
+        width: 100%;
     }
 }
