--- a/src/sass/layout/body.scss
+++ b/src/sass/layout/body.scss
@@ -1,7 +1,7 @@
 .gallery {
     @media screen and (min-width: 768px) {
         display: grid;
-        max-width: 704px;
+        max-width: 100%;
         grid-template-columns: repeat(2, minmax(336, 1fr));
         grid-gap: 16px;
         justify-content: center;
