--- a/src/sass/layout/header.scss
+++ b/src/sass/layout/header.scss
@@ -19,7 +19,7 @@
     }
 
     @media screen and (min-width: 768px) {
-        max-width: 768px;
+        max-width: 100%;
         min-height: 216px;
         background-image:
             url(../images/header-background-tab.jpg);
